--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=socket-jam-socket
+
+spring.data.mongodb.uri=${DB_URL}
+spring.data.mongodb.username=${DB_USERNAME}
+spring.data.mongodb.password=${DB_PASSWORD}
+spring.data.mongodb.database=${DB_DBNAME}
+
+spring.jwt.secret=${JWT_SECRET}
+
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.client.initial-instance-info-replication-interval-seconds=5
+eureka.client.registry-fetch-interval-seconds=5
+
+eureka.instance.lease-renewal-interval-in-seconds=5
+eureka.instance.lease-expiration-duration-in-seconds=5
