--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=socket-jam-socket
+server.port=8082
 
 spring.data.mongodb.uri=${DB_URL}
 spring.data.mongodb.username=${DB_USERNAME}
