feature - 소켓 설정 추가

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+### RSA Keys ###
+/src/main/resources/keys
+
 ### STS ###
 .apt_generated
 .classpath
