--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ java {
 
 repositories {
 	mavenCentral()
+    mavenLocal()
 }
 
 ext {
@@ -35,6 +36,8 @@ dependencies {
 	testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    implementation 'com.yareach:socket-jam-common:1.2'
 }
 
 dependencyManagement {
