feature - 소켓 코드 추가
소켓에 연결시 backend에서 joinInfo를 얻어와 적법한지 조회
에러 헨들러 추가
자신이 속한 방에만 보낼 수 있도록 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,8 @@ spring:
     name: socket-jam-socket
   data:
     redis:
+      host: ${REDIS_HOST}
+      port: ${REDIS_PORT}
       password: ${REDIS_PASSWORD}
   jwt:
     public-key-file: keys/public.pem
