feature - 연결관련 코드 추가

--- a/build.gradle
+++ b/build.gradle
@@ -32,12 +32,17 @@ dependencies {
 	implementation 'org.jetbrains.kotlin:kotlin-reflect'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.springframework.cloud:spring-cloud-stream-binder-kafka'
+    implementation 'org.springframework.cloud:spring-cloud-starter-stream-kafka'
+    implementation 'org.springframework.cloud:spring-cloud-stream'
+    implementation 'org.apache.kafka:kafka-streams'
+    testImplementation 'org.springframework.cloud:spring-cloud-stream-test-binder'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-    implementation 'com.yareach:socket-jam-common:1.2'
+    implementation 'com.yareach:socket-jam-common:1.4'
 }
 
 dependencyManagement {
