--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8082
+  port: ${SERVER_PORT}
 
 spring:
   application:
@@ -20,15 +20,14 @@ spring:
           destination: socket-jam.socket.disconnected
       kafka:
         binder:
-          brokers: localhost:29092
-
+          brokers: ${KAFKA_HOST}:${KAFKA_PORT}
 
 eureka:
   client:
-    service-url:
-      default-zone: http://localhost:8761/eureka
     initial-instance-info-replication-interval-seconds: 5
     registry-fetch-interval-seconds: 5
+    service-url:
+      defaultZone: "http://${EUREKA_HOSTNAME}:${EUREKA_PORT}/eureka"
   instance:
     lease-renewal-interval-in-seconds: 5
     lease-expiration-duration-in-seconds: 5
